<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SuccessfulFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/successfullTv"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/task_subtitle"
            android:layout_marginBottom="8dp"
            android:text="@string/succesful"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/task_subtitle"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:text="@string/success_bottom_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/actionTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottomContainer"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <View
            android:id="@+id/bottomContainer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true" />


    </RelativeLayout>
</FrameLayout>