<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.WalkthroughFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/male_female_shadow"
            android:layout_margin="20dp"
            android:layout_above="@+id/task"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/task"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal"
            android:textAlignment="center"
            android:text="@string/tasks_and_assign"
            android:layout_width="match_parent"
            android:layout_above="@+id/task_subtitle"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/task_subtitle"
            android:text="@string/bottom_task_text"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Small"
            android:textStyle="normal"
            android:textAlignment="center"/>


        <TextView
            android:id="@+id/get_startedTv"
            android:text="@string/get_started"
            android:layout_width="wrap_content"
           android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:textColor="@color/black"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal"

            android:layout_marginBottom="15dp"
            android:layout_above="@id/emptyContainer"
            android:textAlignment="center"/>



        <View
            android:id="@+id/emptyContainer"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </RelativeLayout>

</FrameLayout>
